# agtmux

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  go.mod  justfile
.github/workflows/: ci.yml  release.yml
cmd/agtmux/: main.go
cmd/agtmux-app/: main.go  main_test.go
cmd/agtmuxd/: main.go  main_test.go  pane_classifier.go  pane_classifier_test.go  pane_stability.go  pane_stability_test.go
crates/agtmux-core/: Cargo.toml
crates/agtmux-core-v5/: Cargo.toml
crates/agtmux-core/src/: backend.rs  lib.rs  source.rs
crates/agtmux-core/src/adapt/: loader.rs  mod.rs
crates/agtmux-core/src/adapt/providers/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
crates/agtmux-core/src/attn/: mod.rs
crates/agtmux-core/src/engine/: mod.rs
crates/agtmux-core/src/types/: activity.rs  attention.rs  evidence.rs  meta.rs  mod.rs  provider.rs  source_type.rs
crates/agtmux-core/tests/: fixtures.rs  replay.rs
crates/agtmux-daemon/: Cargo.toml
crates/agtmux-daemon-v5/: Cargo.toml
crates/agtmux-daemon/src/: accuracy.rs  auto_label.rs  client.rs  display.rs  label.rs  lib.rs  main.rs  orchestrator.rs  preflight.rs  recorder.rs  serde_helpers.rs  server.rs  status.rs  store.rs  terminal_output.rs  tmux_status.rs  tui.rs  ws_server.rs
crates/agtmux-daemon/src/sources/: api.rs  file.rs  hook.rs  mod.rs  poller.rs
crates/agtmux-gateway/: Cargo.toml
crates/agtmux-runtime/: Cargo.toml
crates/agtmux-runtime/src/: cli.rs  client.rs  cmd_json.rs  cmd_ls.rs  cmd_pick.rs  cmd_wait.rs  cmd_watch.rs  codex_poller.rs  context.rs  main.rs  poll_loop.rs  server.rs  setup_hooks.rs
crates/agtmux-source-claude-hooks/: Cargo.toml
crates/agtmux-source-claude-jsonl/: Cargo.toml
crates/agtmux-source-codex-appserver/: Cargo.toml
crates/agtmux-source-poller/: Cargo.toml
crates/agtmux-tmux/: Cargo.toml
crates/agtmux-tmux-v5/: Cargo.toml
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: 00_router.md  10_foundation.md  20_spec.md  30_architecture.md  40_design.md  50_plan.md  55_distribution.md  60_tasks.md  70_progress.md  90_index.md  README.md  agtmux-spec.md  codex-appserver-api-reference.md  event-driven-integration.md  implementation-plan.md  lessons.md  macapp-ui-state-model.md  poller-baseline-spec.md  tasks.md  test-catalog.md
docs/80_decisions/: ADR-2026-02-25-v5-mvp-source-policy.md  ADR-20260225-core-first-mode-b.md  ADR-20260225-cursor-binding-latency.md  ADR-20260225-mvp-single-process-runtime.md  ADR-20260225-operational-guards.md  ADR-20260225-pane-signature-v1.md  ADR-20260225-runtime-control-contracts.md  ADR-20260226-pane-first-resolver-grouping.md  ADR-YYYYMMDD-short-title.md
docs/85_reviews/: RP-T033-poller-baseline.md  RP-T070-migration-canary-rollback.md  RP-T071-backup-restore.md  RP-T135b-claude-jsonl-title.md  RP-T139-cli-redesign.md  _review-pack-template.md
docs/implementation-records/: phase1-6-implementation-decision-log-2026-02-15.md  phase10-terminal-smoothness-2026-02-18.md  phase11-terminal-contrast-and-input-ux-2026-02-18.md  phase12-status-inference-hardening-2026-02-18.md  phase13-pane-switch-terminal-cache-2026-02-18.md  phase14-sidebar-scalability-pinning-2026-02-18.md  phase15-multi-target-ops-hardening-2026-02-18.md  phase16-terminal-observability-and-budget-2026-02-18.md  phase17-terminal-render-pacing-2026-02-19.md  phase18-terminal-scrollback-and-stream-rate-2026-02-19.md  phase19-a-d-implementation-2026-02-19.md  phase19-e-f-implementation-2026-02-19.md  phase19-evidence-driven-state-engine-v2-plan-2026-02-19.md  phase20-implementation-log-2026-02-20.md  phase20-tmux-first-attention-and-last-active-plan-2026-02-20.md  phase21-d-v1-terminal-decommission-2026-02-20.md  phase21-e-ssh-hardening-2026-02-20.md  phase21-tty-v2-terminal-engine-detailed-design-2026-02-20.md  phase21-tty-v2-wire-schema-2026-02-20.md  phase22-26-implementation-design-no-orchestration-2026-02-20.md  phase27-pane-first-terminal-normalization-2026-02-21.md  phase7-implementation-decision-log-2026-02-15.md  phase8-way2-ui-refinement-2026-02-15.md  phase9-main-interactive-tty-strategy-2026-02-16.md  phase9-task-decomposition-and-tdd-2026-02-16.md
docs/runbooks/: backup-restore.md  migration-canary-rollback.md
docs/v2/: 00-index.md  10-product-charter.md  20-unified-design.md  30-detailed-design.md  40-execution-plan.md  50-poc-learnings.md  60-ui-feedback-loop.md
docs/v3/: 00-product.md  01-architecture.md  02-state-engine.md  03-terminal-backend.md  03-tmux-bridge.md  04-daemon-api.md  05-cli-views.md  06-quality-gates.md  07-execution-plan.md  08-risks.md  09-test-loop.md  README.md
fixtures/attention/: admin_event.json  completion_signal.json  error_attention.json
fixtures/claude/: hook_approval.json  hook_done.json  hook_error.json  hook_input.json  hook_running.json  no_signal.json  poller_false_positive.json  poller_idle.json  poller_running.json
fixtures/codex/: api_approval.json  (+4 more)
macapp/: .gitignore  Package.swift  README.md
providers/: claude.toml  codex.toml  copilot.toml  gemini.toml
scripts/: agtmux-claude-hook.sh
tmp/: agtmux_codex_review_arch_v2.md  agtmux_codex_review_artifacts_plan.md  agtmux_codex_review_artifacts_tasks.md  agtmux_codex_review_artifacts_tests.md  agtmux_codex_review_artifacts_trace.md  agtmux_codex_review_p0p1_arch.md  agtmux_codex_review_p0p1_plan.md  agtmux_codex_review_p0p1_reliability.md  agtmux_codex_review_p0p1_ux.md  agtmux_codex_review_plan_v2.md  agtmux_codex_review_reliability_v2.md  agtmux_codex_review_ux_v2.md  agtmux_codex_review_value_v2.md  handover-2026-02-13.md  handover-orchestrator-2026-02-13-detailed.md  review-architecture-2026-02-13.md  review-consistency-2026-02-13.md  review-feasibility-2026-02-13.md  review-round2-architecture-2026-02-13.md  review-round2-consistency-2026-02-13.md  review-round2-feasibility-2026-02-13.md  review-round2-summary-2026-02-13.md  review-round2-testing-2026-02-13.md  review-summary-2026-02-13.md  review-testing-2026-02-13.md
(+206 files in other folders)
