[workspace]
members = [
    "crates/agtmux-core-v5",
    "crates/agtmux-gateway",
    "crates/agtmux-daemon-v5",
    "crates/agtmux-source-codex-appserver",
    "crates/agtmux-source-claude-hooks",
    "crates/agtmux-source-claude-jsonl",
    "crates/agtmux-source-poller",
    "crates/agtmux-tmux-v5",
    "crates/agtmux-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/g960059/agtmux"
homepage = "https://github.com/g960059/agtmux"

[workspace.dependencies]
agtmux-core-v5 = { path = "crates/agtmux-core-v5" }
agtmux-source-codex-appserver = { path = "crates/agtmux-source-codex-appserver" }
agtmux-source-claude-hooks = { path = "crates/agtmux-source-claude-hooks" }
agtmux-source-claude-jsonl = { path = "crates/agtmux-source-claude-jsonl" }
agtmux-source-poller = { path = "crates/agtmux-source-poller" }
agtmux-gateway = { path = "crates/agtmux-gateway" }
agtmux-daemon-v5 = { path = "crates/agtmux-daemon-v5" }
agtmux-tmux-v5 = { path = "crates/agtmux-tmux-v5" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "sync", "time", "macros", "io-util", "process"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "g960059/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Publish jobs to run in CI
publish-jobs = ["homebrew"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
