[package]
name = "agtmux-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "agtmux_daemon"
path = "src/lib.rs"

[[bin]]
name = "agtmux"
path = "src/main.rs"

[dependencies]
agtmux-core = { path = "../agtmux-core" }
agtmux-tmux = { path = "../agtmux-tmux" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
glob = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
