[package]
name = "agtmux-runtime"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agtmux"
path = "src/main.rs"

[dependencies]
agtmux-core-v5.workspace = true
agtmux-source-poller.workspace = true
agtmux-gateway.workspace = true
agtmux-daemon-v5.workspace = true
agtmux-tmux-v5.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
