[package]
name = "agtmux-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Real-time AI agent state monitor for tmux"
keywords = ["tmux", "ai", "agent", "monitor", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agtmux"
path = "src/main.rs"

[dependencies]
agtmux-core-v5.workspace = true
agtmux-source-codex-appserver.workspace = true
agtmux-source-claude-hooks.workspace = true
agtmux-source-claude-jsonl.workspace = true
agtmux-source-poller.workspace = true
agtmux-gateway.workspace = true
agtmux-daemon-v5.workspace = true
agtmux-tmux-v5.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
